# graph-onedrive

./: .gitignore  .pre-commit-config.yaml  AUTHORS.md  CHANGES.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements-dev.txt  requirements-tox.txt  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: tests.yml
docs/: DOCUMENTATION.md
docs/examples/: config.json  config.toml  config.yaml  example_auth-from-file.py  example_auth-inline.py  example_context-manager.py  example_upload_file.py
docs/examples/basic/: example_basic.py  main.py
docs/examples/using config file/: example_config_file.py  main.py
docs/images/: temp.md
examples/basic/: main.py
examples/using config file/: config.json  main.py
src/graph_onedrive/: __init__.py  __main__.py  _cli.py  _config.py  _decorators.py  _main.py  _manager.py  _onedrive.py
tests/: _config_test.py  _decorators_test.py  _main_test.py  _manager_test.py  _onedrive_test.py  conftest.py  decorators_test.py  mock_items.json  mock_responses.json
