[build-system]
requires = [
    "setuptools>=54",
    "wheel"
]
build-backend = "setuptools.build_meta"

[tool.black]
target-version = ["py39", "py310", "py311", "py312", "py313"]

[tool.coverage.run]
plugins = ["covdefaults",]
source = ["graph_onedrive"]

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["tests",]

[tool.mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
disallow_subclassing_any = true
no_implicit_optional = true
strict_equality = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unused_ignores = true
namespace_packages = false

[[tool.mypy.overrides]]
module = [
    "testing.*",
    "tests.*",
    "docs.*"
]
disallow_untyped_defs = false

[tool.tox]
legacy_tox_ini = """
    [tox]
    requires =
        tox >= 4.0
    envlist =
        py{39,310,311,312,313}
        style-and-typing
    skip_missing_interpreters = true

    [testenv]
    setenv =
        PYTHONPATH = {toxinidir}
    deps = -r{toxinidir}/requirements-dev.txt
    commands =
        coverage erase
        coverage run -m pytest {posargs:tests}
        coverage report --fail-under 55

    [testenv:style-and-typing]
    skip_install = true
    deps = pre-commit
    commands = pre-commit run --all-files
"""
