[metadata]
name = Graph-OneDrive
version = attr: graph_onedrive.__version__
description = Perform simple tasks on OneDrive through the Graph API.
long_description = file: README.md
long_description_content_type = text/markdown
keywords = onedrive, graph, microsoft
url = https://github.com/dariobauer/graph-onedrive
author = Dario Bauer
author_email = dariobauer@duck.com
license = BSD-3-Clause
license_file = LICENSE
project_urls = 
    Documentation = https://github.com/dariobauer/graph-onedrive/blob/main/docs/DOCUMENTATION.md
    Issue Tracker = https://github.com/dariobauer/graph-onedrive/issues
    Changes = https://github.com/dariobauer/graph-onedrive/blob/main/CHANGES.md
    Source Code = https://github.com/dariobauer/graph-onedrive
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
packages = find:
package_dir = = src
include_package_data = true
python_requires = >=3.7
# Dependencies are in setup.py for GitHub's dependency graph.

[options.packages.find]
where =
    src
exclude =
    tests*
    docs*

[options.entry_points]
console_scripts =
    graph-onedrive = graph_onedrive._cli:main

[bdist_wheel]
universal = True