[metadata]
name = Graph_OneDrive
version = attr: graph_onedrive.__version__
description = Perform simple tasks on OneDrive through the Graph API.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/dariobauer/graph-onedrive
author = Dario Bauer
author_email = dariobauer@duck.com
license = BSD-3-Clause
license_file = LICENSE
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
keywords = onedrive, graph, microsoft
project_urls =
    Documentation = https://github.com/dariobauer/graph-onedrive/blob/main/docs/DOCUMENTATION.md
    Issue Tracker = https://github.com/dariobauer/graph-onedrive/issues
    Changes = https://github.com/dariobauer/graph-onedrive/blob/main/CHANGES.md
    Source Code = https://github.com/dariobauer/graph-onedrive

[options]
packages = find:
python_requires = >=3.7
include_package_data = true
package_dir = = src

[options.packages.find]
where =
    src
exclude =
    tests*
    testing*
    docs*

[options.entry_points]
console_scripts =
    graph-onedrive = graph_onedrive._cli:main

[options.package_data]
graph_onedrive = py.typed

[bdist_wheel]
universal = True

[mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[mypy-testing.*]
disallow_untyped_defs = false

[mypy-tests.*]
disallow_untyped_defs = false

[mypy-docs.*]
disallow_untyped_defs = false
